# video-FFmpeg

./: .gitignore  CMakeLists.txt  Video.cpp  Video.hpp  main.cpp  readme
